Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-30452

ssl error: unexpected EOF while reading

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Critical
    • Resolution: Fixed
    • 10.10(EOL)
    • 10.10.3
    • Galera, Server, SSL
    • None

    Description

      TLS/SSL error caused by unexpected eof while reading occurs during Galera tests:

      galera.galera_var_reject_queries 'innodb' w2 [ fail ]
              Test ended at 2023-01-19 06:24:22
       
      CURRENT_TEST: galera.galera_var_reject_queries
      mysqltest: At line 34: query 'SELECT * FROM t1' failed with wrong errno <Unknown> (2026): 'TLS/SSL error: unexpected eof while reading', instead of ER_CONNECTION_KILLED (1927)...

      Attachments

        Issue Links

          Activity

            People

              sysprg Julius Goryavsky (Inactive)
              sysprg Julius Goryavsky (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 4d 1.25h
                  4d 1.25h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.