MDEV-30452: ssl error: unexpected EOF while reading

This commit contains a сorrection for a new behaviour was introduced
in OpenSSL after version 1.1.1e, when a peer does not send close_notify
before closing the connection.